--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "n98/magerun": "^1.103",
-        "php": "~7.2||~7.3||~7.4"
+        "php": "~7.0||~7.1||~7.2||~7.3||~7.4"
     },
     "authors": [
         {
